--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.youtubeContainer {
+  z-index : 0;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  margin-bottom: 50px;
+}
+
+.youtubeContainer iframe {
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
